= Changelog

== Version 2.2.1

[small]#Released at xx.xx.xxxx#

* Removed Mangoo.TEST enum in test utilities
* Removed cache provider
* Sonar refactorings
* Updated documentation

== Version 2.2.0

[small]#Released at 10.01.2016#

* https://github.com/svenkubiak/mangooio/issues/110[#110] Added X-Response-Header (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/108[#108] Refactored RequestHandler (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/98[#98] Improved RequestHandler (svenkubiak)
* Added LocalDateTime timestamp of application start (svenkubiak)
* Added new Benchmark project (svenkubiak)
* Improved application startup time (svenkubiak)
* Updated documentation (svenkubiak)
* Version bumps (svenkubiak)
** undertow-core 1.3.10.Final -> 1.3.12.Final
** bcprov-jdk15on 1.53 -> 1.54
** mockito 2.0.33-Beta -> 2.0.36-Beta

== Version 2.1.0

[small]#Released at 21.12.2015#

* https://github.com/svenkubiak/mangooio/issues/103[#103] Fixed bug when cookie encryption was enabled (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/102[#102] Made Cache eviction configurable (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/101[#101] Fixed keys in archetype (MarkVink)
* https://github.com/svenkubiak/mangooio/issues/97[#97] Fixed incorrect Form documentation (svenkubiak, MarkVink)
* https://github.com/svenkubiak/mangooio/issues/94[#95] Added new @memory administrative URL (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/94[#94] Added new @system administrative URL (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/93[#93] Improved DispatcherHandler/RequestHandler (svenkubiak)
* Updated documentation (svenkubiak, MarkVink)
* Version bumps (svenkubiak)
** log4j 2.4.1 -> 2.5
** mockito 2.0.31-Beta -> 2.0.33-Beta

== Version 2.0.2

[small]#Released at 17.12.2015#

* https://github.com/svenkubiak/mangooio/issues/91[#91] Added numeric validation (svenkubiak)